--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,10 @@
     "xstring": "cpp",
     "xutility": "cpp",
     "iosfwd": "cpp",
-    "ratio": "cpp"
+    "ratio": "cpp",
+    "led.h": "c",
+    "usart.h": "c",
+    "iq_math.h": "c"
   },
   "terminal.integrated.env.windows": {
     "CHERE_INVOKING": "1"
@@ -31,7 +34,7 @@
  "C_Cpp.clang_format_fallbackStyle": "{BasedOnStyle: Google, IndentWidth: 4 }",
   "editor.formatOnPaste": false,
 
-  "C_Cpp.formatting": "Default",
+  "C_Cpp.formatting": "default",
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
@@ -99,12 +102,7 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "files.associations": {
-    "led.h": "c",
-    "usart.h": "c",
-    "iq_math.h": "c"
-  },
+  "C_Cpp_Runner.msvcSecureNoWarnings": false, 
   "Codegeex.RepoIndex": true,
   "stm32-for-vscode.armToolchainPath": "C:\\PROGRAM FILES (X86)\\ARM GNU TOOLCHAIN ARM-NONE-EABI\\13.3 REL1\\BIN"
 }
