--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.autoSave": "afterDelay",
   "files.associations": {
+    "*.cpp": "cpp",
+    "*.h": "cpp",
     "algorithm": "cpp",
     "functional": "cpp",
     "chrono": "cpp",
@@ -27,7 +29,8 @@
     "ratio": "cpp",
     "led.h": "c",
     "usart.h": "c",
-    "iq_math.h": "c"
+    "iq_math.h": "c",
+    "cstdint": "cpp"
   },
   "files.exclude": {
     ".git/": false
@@ -107,5 +110,9 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "Codegeex.RepoIndex": true,
-  "stm32-for-vscode.armToolchainPath": "C:\\PROGRAM FILES (X86)\\ARM GNU TOOLCHAIN ARM-NONE-EABI\\13.3 REL1\\BIN"
+  "stm32-for-vscode.armToolchainPath": "C:\\PROGRAM FILES (X86)\\ARM GNU TOOLCHAIN ARM-NONE-EABI\\13.3 REL1\\BIN",
+  "workbench.colorCustomizations": {
+    "minimap.background": "#00000000",
+    "scrollbar.shadow": "#00000000"
+  }
 }
